# pidoras

./: CMakeLists.txt  countrylistmanager.cpp  countrylistmanager.h  instructionsdialog.cpp  instructionsdialog.h  instructionsdialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resource.qrc  weatherapiclient.cpp  weatherapiclient.h  weatherdataparser.cpp  weatherdataparser.h  weathericonmanager.cpp  weathericonmanager.h
